--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -4,7 +4,7 @@
 ##############################
 
 
-
+deafault.example.property= It is for all environment
 server.port=${port:8081}
 
 ##############################################################
@@ -18,5 +18,5 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => I am coming from ms-user default environment
+example.property = Sanjeev => is coming from default configuration of ms-user.properties.
 
