--- a/ms-user/dev/ms-user.properties
+++ b/ms-user/dev/ms-user.properties
@@ -16,4 +16,4 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => I am coming from ms-user devlopment environment
+example.property = Sanjeev => is coming from development environment of ms-user.properties.
