--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -18,5 +18,5 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => is coming from default configuration of ms-user.properties.
+example.property = Sanjeev => This is key will be shared among all environment.
 
