--- a/ms-user/prod/ms-user.properties
+++ b/ms-user/prod/ms-user.properties
@@ -17,4 +17,4 @@ eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => is coming from production environment of ms-user.properties.
+example.property = Sanjeev => This is a production-environment-key.
