Files are modified

--- a/ms-user/prod/ms-user.properties
+++ b/ms-user/prod/ms-user.properties
@@ -3,7 +3,7 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-server.port=${port:8081}
+#server.port=${port:8081}
 
 
 ##############################################################
@@ -12,9 +12,9 @@ server.port=${port:8081}
 #### now they will be picked from here. 
 ##############################################################
 
-eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.hostname=localhost
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => This is a production-environment-key.
+example.property = Sanjeev => I am coming from prod-environment-configuration file of this micro-service.
