--- a/global/default/application.properties
+++ b/global/default/application.properties
@@ -3,4 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 #spring.profiles.active=prod
-global.example.property = Sanjeev => This globla-key-value will be shared among all micro-services.
+global.example.property = Sanjeev => I am coming from global-configuration file of COnfig-Server.
