--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -3,8 +3,8 @@
 #### @Date   05/05/2024    ###
 ##############################
 
+deafault.example.property = Sanjeev => I am coming from default-configuration file of this micro-service.
 
-deafault.example.property= It is for all environment
 server.port=${port:8081}
 
 ##############################################################
@@ -17,6 +17,3 @@ eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
-example.property = Sanjeev => This is key will be shared among all environment.
-
