--- a/ms-user/dev/ms-user.properties
+++ b/ms-user/dev/ms-user.properties
@@ -3,7 +3,7 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-server.port=${port:8081}
+#server.port=${port:8081}
 
 ##############################################################
 #### Configuration for registering itself with Eureka Server
@@ -11,9 +11,9 @@ server.port=${port:8081}
 #### now they will be picked from here. 
 ##############################################################
 
-eureka.instance.hostname=localhost
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.hostname=localhost
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => This is a development-environment-key.
+example.property = Sanjeev => I am coming from dev-environment-configuration file of this micro-service.
