Files are modified

--- a/ms-user/sit/ms-user.properties
+++ b/ms-user/sit/ms-user.properties
@@ -17,4 +17,4 @@
 #eureka.client.fetchRegistry=true
 #eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
-example.property = Sanjeev => I am coming from sit-environment-configuration file of this micro-service.
+example.property = Sanjeev => I am coming from sit-environment-configuration file of this micro-service available at Config-Server.
