--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -3,7 +3,7 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-deafault.example.property = Sanjeev => I am coming from default-configuration file of this micro-service.
+deafault.example.property = Sanjeev => I am coming from default-configuration file of this micro-service available at Config-Server.
 
 server.port=${port:8081}
 
