Files have been modified

--- a/global/application.properties
+++ b/global/application.properties
@@ -10,6 +10,8 @@ global.example.property = Sanjeev => I am coming from global-configuration file 
 #### All these details are being moved from local to Git and 
 #### now they will be picked from here. 
 ##############################################################
+#This setting is making it discoverable through Discovery server
+spring.cloud.config.discovery.enabled=true
 
 eureka.instance.hostname=localhost
 eureka.client.registerWithEureka=true
