Files have been modified

--- a/ms-mail/default/ms-mail.properties
+++ b/ms-mail/default/ms-mail.properties
@@ -5,6 +5,6 @@
 
 server.servlet.context-path=/ms-mail
 server.port=${port:8084}
-deafault.example.property = Sanjeev[ms-mail] => I am coming from default-configuration file of this micro-service available at Config-Server.
+deafault.example.property = Sanjeev[ms-mail Default] => I am coming from default-configuration file of this micro-service available at Config-Server.
 
 
