--- a/ms-order/default/ms-order.properties
+++ b/ms-order/default/ms-order.properties
@@ -4,4 +4,4 @@
 ##############################
 server.servlet.context-path=/ms-order
 server.port=${port:8083}
-deafault.example.property = Sanjeev[ms-order] => I am coming from default-configuration file of this micro-service available at Config-Server.
+deafault.example.property = Sanjeev[ms-order Default] => I am coming from default-configuration file of this micro-service available at Config-Server.
