Files have modified

--- a/global/application.properties
+++ b/global/application.properties
@@ -3,7 +3,7 @@
 #### @Date   05/05/2024    ###
 ##############################
 #spring.profiles.active=prod
-global.example.property = Sanjeev[MicroService-Global] => I am coming from global-configuration file of Config-Server.
+global.example.property = Sanjeev[MicroService-Global] => I am coming from a git-based centralized configuration file through a Config-Server.
 
 ##############################################################
 #### Configuration for registering itself with Eureka Server
