--- a/ms-gateway/default/ms-gateway.properties
+++ b/ms-gateway/default/ms-gateway.properties
@@ -3,7 +3,8 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-deafault.example.property = Sanjeev[ms-gateway  Default] => I am coming from default-configuration file of this micro-service available at Config-Server.
+deafault.example.property = Sanjeev[ms-gateway Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
+
 
 server.port=${port:8765}
 
