--- a/ms-user/prod/ms-user.properties
+++ b/ms-user/prod/ms-user.properties
@@ -3,4 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev => I am coming from prod-environment-configuration file of this micro-service available at Config-Server.
+example.property =Sanjeev[ms-user environment-prod] => I am coming from a git-based centralized configuration file through a Config-Server.
