--- a/ms-gateway/sit/ms-gateway.properties
+++ b/ms-gateway/sit/ms-gateway.properties
@@ -3,4 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-gateway] => I am coming from sit-environment-configuration file of this micro-service available at Config-Server.
+example.property = Sanjeev[ms-gateway environment-sit] => I am coming from a git-based centralized configuration file through a Config-Server.
