--- a/ms-mail/sit/ms-mail.properties
+++ b/ms-mail/sit/ms-mail.properties
@@ -3,4 +3,6 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-mail] => I am coming from sit-environment-configuration file of this micro-service available at Config-Server.
+
+example.property = Sanjeev[ms-mail environment-sit] => I am coming from a git-based centralized configuration file through a Config-Server.
+
