--- a/ms-order/prod/ms-order.properties
+++ b/ms-order/prod/ms-order.properties
@@ -3,4 +3,7 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-order] => I am coming from prod-environment-configuration file of this micro-service available at Config-Server.
+
+
+example.property = Sanjeev[ms-order environment-prod] => I am coming from a git-based centralized configuration file through a Config-Server.
+
