--- a/ms-payment/default/ms-payment.properties
+++ b/ms-payment/default/ms-payment.properties
@@ -5,4 +5,7 @@
 
 server.servlet.context-path=/ms-payment
 server.port=${port:8082}
-deafault.example.property = Sanjeev[ms-payment Default] => I am coming from default-configuration file of this micro-service available at Config-Server.
+
+
+deafault.example.property = Sanjeev[ms-payment Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
+
