--- a/ms-payment/dev/ms-payment.properties
+++ b/ms-payment/dev/ms-payment.properties
@@ -3,4 +3,5 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-payment] => I am coming from dev-environment-configuration file of this micro-service available at Config-Server.
+example.property = Sanjeev[ms-payment environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
+
