--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -4,4 +4,4 @@
 ##############################
 server.servlet.context-path=/ms-user
 server.port=${port:8081}
-deafault.example.property = Sanjeev[ms-user Default] => I am coming from default-configuration file of this micro-service available at Config-Server.
+deafault.example.property = Sanjeev[ms-user Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
