--- a/ms-user/dev/ms-user.properties
+++ b/ms-user/dev/ms-user.properties
@@ -3,4 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev => I am coming from dev-environment-configuration file of this micro-service available at Config-Server.
+example.property =example.property = Sanjeev[ms-user environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
