--- a/ms-user/sit/ms-user.properties
+++ b/ms-user/sit/ms-user.properties
@@ -3,4 +3,5 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev => I am coming from sit-environment-configuration file of this micro-service available at Config-Server.
+
+example.property =Sanjeev[ms-user environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
