Files have been modified

--- a/ms-mail/default/ms-mail.properties
+++ b/ms-mail/default/ms-mail.properties
@@ -7,7 +7,6 @@ server.servlet.context-path=/ms-mail
 server.port=${port:8084}
 
 
-deafault.example.property = Sanjeev[ms-mail Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
-
+deafault.example.property =Sanjeev [ ms-mail => default-config ] => A key-value which is loaded in ms-mail [micro-service] from GIT-Repository via a Config-Server.
 
 
