--- a/ms-mail/sit/ms-mail.properties
+++ b/ms-mail/sit/ms-mail.properties
@@ -4,5 +4,4 @@
 ##############################
 
 
-example.property = Sanjeev[ms-mail environment-sit] => I am coming from a git-based centralized configuration file through a Config-Server.
-
+example.property=Sanjeev [ ms-mail => sit-config ] => A key-value which is loaded in ms-mail [micro-service] from GIT-Repository via a Config-Server.
