--- a/ms-order/default/ms-order.properties
+++ b/ms-order/default/ms-order.properties
@@ -5,5 +5,5 @@
 server.servlet.context-path=/ms-order
 server.port=${port:8083}
 
-deafault.example.property = Sanjeev[ms-order Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
+deafault.example.property =Sanjeev [ ms-order => default-config ] => A key-value which is loaded in ms-order [micro-service] from GIT-Repository via a Config-Server.
 
