--- a/ms-order/dev/ms-order.properties
+++ b/ms-order/dev/ms-order.properties
@@ -4,5 +4,4 @@
 ##############################
 
 
-example.property = Sanjeev[ms-order environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
-
+example.property=Sanjeev [ ms-order => dev-config ] => A key-value which is loaded in ms-order [micro-service] from GIT-Repository via a Config-Server.
