--- a/ms-order/prod/ms-order.properties
+++ b/ms-order/prod/ms-order.properties
@@ -5,5 +5,5 @@
 
 
 
-example.property = Sanjeev[ms-order environment-prod] => I am coming from a git-based centralized configuration file through a Config-Server.
+example.property=Sanjeev [ ms-order => prod-config ] => A key-value which is loaded in ms-order [micro-service] from GIT-Repository via a Config-Server.
 
