--- a/ms-payment/default/ms-payment.properties
+++ b/ms-payment/default/ms-payment.properties
@@ -7,5 +7,5 @@ server.servlet.context-path=/ms-payment
 server.port=${port:8082}
 
 
-deafault.example.property = Sanjeev[ms-payment Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
+deafault.example.property = Sanjeev [ ms-payment => default-config ] => A key-value which is loaded in ms-payment [micro-service] from GIT-Repository via a Config-Server.
 
