--- a/global/application.properties
+++ b/global/application.properties
@@ -2,14 +2,13 @@
 #### @Author Sanjeev Kumar ###
 #### @Date   05/05/2024    ###
 ##############################
-#spring.profiles.active=prod
-global.example.property = Sanjeev[MicroService-Global] => I am coming from a git-based centralized configuration file through a Config-Server.
+
+global.example.property = Sanjeev[MicroService-Global-config file] =>  A key-value which is loaded in ms-gateway [micro-service] from GIT-Repository via a Config-Server.
 
 ##############################################################
-#### Configuration for registering itself with Eureka Server
-#### All these details are being moved from local to Git and 
-#### now they will be picked from here. 
+#### Configuration for registering itself[Micro-Service] with Eureka-Discovery-Server
 ##############################################################
+
 #This setting is making it discoverable through Discovery server
 spring.cloud.config.discovery.enabled=true
 
