--- a/ms-gateway/dev/ms-gateway.properties
+++ b/ms-gateway/dev/ms-gateway.properties
@@ -3,4 +3,5 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-gateway environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
+example.property=Sanjeev [ ms-gateway => dev-config ] => A key-value which is loaded in ms-gateway [micro-service] from GIT-Repository via a Config-Server.
+
