--- a/ms-mail/prod/ms-mail.properties
+++ b/ms-mail/prod/ms-mail.properties
@@ -3,4 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-mail environment-prod] => I am coming from a git-based centralized configuration file through a Config-Server.
+example.property=Sanjeev [ ms-mail => prod-config ] => A key-value which is loaded in ms-mail [micro-service] from GIT-Repository via a Config-Server.
