--- a/ms-payment/dev/ms-payment.properties
+++ b/ms-payment/dev/ms-payment.properties
@@ -3,5 +3,4 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-payment environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
-
+example.property=Sanjeev [ ms-payment => dev-config ] => A key-value which is loaded in ms-payment [micro-service] from GIT-Repository via a Config-Server.
