--- a/ms-payment/sit/ms-payment.properties
+++ b/ms-payment/sit/ms-payment.properties
@@ -3,4 +3,5 @@
 #### @Date   05/05/2024    ###
 ##############################
 
-example.property = Sanjeev[ms-payment environment-sit] => I am coming from a git-based centralized configuration file through a Config-Server.
+example.property=Sanjeev [ ms-payment => sit-config ] => A key-value which is loaded in ms-payment [micro-service] from GIT-Repository via a Config-Server.
+
