--- a/ms-user/default/ms-user.properties
+++ b/ms-user/default/ms-user.properties
@@ -4,4 +4,4 @@
 ##############################
 server.servlet.context-path=/ms-user
 server.port=${port:8081}
-deafault.example.property= Sanjeev[ms-user Default-Config] => I am coming from a git-based centralized configuration file through a Config-Server.
+deafault.example.property= Sanjeev [ ms-user => default-config ] => A key-value which is loaded in ms-user [micro-service] from GIT-Repository via a Config-Server.
