--- a/ms-user/sit/ms-user.properties
+++ b/ms-user/sit/ms-user.properties
@@ -4,4 +4,4 @@
 ##############################
 
 
-example.property=Sanjeev[ms-user environment-dev] => I am coming from a git-based centralized configuration file through a Config-Server.
+example.property=Sanjeev [ ms-user => sit-config ] => A key-value which is loaded in ms-user [micro-service] from GIT-Repository via a Config-Server.
